# provision

./: .gitignore  BACKLOG.md  CLAUDE.md  README.md  pyproject.toml
macos/: Brewfile  README.md  provision-improvements.md  provision.sh
macos/configs/: com.colima.plist  com.tmux.main.plist
provision/: __init__.py  cli.py  macos.py  steps.py  utils.py
tests/: test_cli.py  test_macos.py  test_steps.py  test_utils.py
